[tool.poetry]
name = "pathit"
version = "0.0.3"
description = "Just like `echo $PATH | tr \":\" \"\\n\"` in one command with options."
authors = ["Evgeny Pogrebnyak <e.pogrebnyak@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.scripts]
pathit = "pathit.show:typer_app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
