[tool.poetry]
name = "justpath"
version = "0.0.15"
description = "Explore PATH environment variable on Windows and Linux."
authors = ["Evgeny Pogrebnyak <e.pogrebnyak@gmail.com>"]
license = "GNU"
readme = "README.md"
repository = "https://github.com/epogrebnyak/justpath"

[tool.poetry.scripts]
pathit = "justpath.show:typer_app"
justpath = "justpath.show:typer_app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
colorama = "^0.4.6"
types-colorama = "^0.4.15.20240106"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.1.14"
isort = "^5.13.2"
black = "^24.1.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
